--- a/src/app/pages/create-question/create-question.component.html
+++ b/src/app/pages/create-question/create-question.component.html
@@ -1,1 +1,48 @@
-<p>create-question works!</p>
+<app-header page="other"></app-header>
+<div class="container">
+  <div class="name-page">
+    <h3>Create question Page</h3>
+  </div>
+  <form [formGroup]="formQuestion" class="form-box">
+    <div class="title">
+      <label class="title-name">Question: </label>
+      <div class="textarea-item">
+        <textarea [ngClass]="formQuestion.controls['title'].errors && formQuestion.controls['title'].touched ?  'warning-textarea textarea-item' : 'textarea-item'" formControlName="title" name="title" id="title" value="" placeholder="Question text"></textarea>
+        <p *ngIf="formQuestion.controls['title'].errors && formQuestion.controls['title'].touched" class="warning-text">Field is required and minimal words is 1 and maximum 255</p>
+      </div>
+    </div>
+    <div class="choice">
+      <label class="choice-title">Please choice type question: </label>
+      <div class="choice-box">
+        <input type="radio" value="single" name="typeQuestion" formControlName="typeQuestion">
+        <label class="choice-name" (click)="choiceType('single')">Single choice</label>
+      </div>
+      <div class="choice-box">
+        <input type="radio" value="multiple" name="typeQuestion" formControlName="typeQuestion">
+        <label class="choice-name" (click)="choiceType('multiple')">Multiple Choice</label>
+      </div>
+      <div class="choice-box">
+        <input type="radio" value="open" name="typeQuestion" formControlName="typeQuestion">
+        <label class="choice-name" (click)="choiceType('open')">Open</label>
+      </div>
+    </div>
+    <div class="btn-box" *ngIf="formQuestion.get('typeQuestion')?.value !== 'open'">
+      <label class="choice-name">Please add new answer</label>
+      <button class="btn-add" (click)="addAnswer('')">+</button>
+    </div>
+    <div *ngIf="formQuestion.get('typeQuestion')?.value !== 'open'">
+      <div class="answers" formArrayName="answers" *ngFor="let answer of formQuestion.controls['answers'].value; let i = index;">
+        <div [formGroupName]="i" class="row">
+          <div class="answer">
+            <textarea class="textarea-item" formControlName="answer" class="answer-textarea" name="answer" value="" placeholder="Add answer"></textarea>
+            <button class="btn-delete" (click)="deleteAnswer(i)">Delete</button>
+          </div>
+<!--          <p *ngIf="answer.controls['answer'].errors && answer.controls['answer'].touched" class="warning-text">Field is required and minimal words is 1 and maximum 255</p>-->
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <button class="btn" (click)="saveQuestion()">Save question</button>
+    </div>
+  </form>
+</div>
