update 'Question Management Page'

--- a/src/app/pages/questions-management/questions-management.component.html
+++ b/src/app/pages/questions-management/questions-management.component.html
@@ -4,6 +4,6 @@
     <h3>Question Management Page</h3>
   </div>
   <div class="question" *ngFor="let question of questions; let i = index">
-    <app-card-question [question]="question" [questionIndex]="i" (delete)='onDeleteQuestion($event)'></app-card-question>
+    <app-card-question [question]="question" [questionIndex]="i" (delete)="onDeleteQuestion($event)"></app-card-question>
   </div>
 </div>
