update 'Question Management Page'

--- a/src/app/pages/questions-management/questions-management.component.scss
+++ b/src/app/pages/questions-management/questions-management.component.scss
@@ -5,6 +5,10 @@
     font-size: 18px;
   }
 
+  .not-found {
+    font-size: 18px;
+    text-align: center;
+  }
   .question {
     margin: 20px 0;
   }
