--- a/src/app/pages/questions-management/questions-management.component.html
+++ b/src/app/pages/questions-management/questions-management.component.html
@@ -3,7 +3,10 @@
   <div class="title-box">
     <h3>Question Management Page</h3>
   </div>
+  <div *ngIf="isNotQuestions">
+    <p class="not-found">Have not questions</p>
+  </div>
   <div class="question" *ngFor="let question of questions; let i = index">
-    <app-card-question [question]="question" [questionIndex]="i" (delete)="onDeleteQuestion($event)"></app-card-question>
+    <app-card-question [question]="question" [questionIndex]="question.id" (delete)="onDeleteQuestion($event)"></app-card-question>
   </div>
 </div>
