--- a/src/app/pages/questions-management/questions-management.component.html
+++ b/src/app/pages/questions-management/questions-management.component.html
@@ -7,6 +7,6 @@
     <p class="not-found">Have not questions</p>
   </div>
   <div class="question" *ngFor="let question of questions; let i = index">
-    <app-card-question [question]="question" [questionIndex]="question.id" (delete)="onDeleteQuestion($event)"></app-card-question>
+    <app-card-question [question]="question" [questionIndex]="question.id" (delete)="onDeleteQuestion(i)"></app-card-question>
   </div>
 </div>
