fix component card for answers

--- a/src/app/shared/components/card-question-for-answer/card-question-for-answer.component.html
+++ b/src/app/shared/components/card-question-for-answer/card-question-for-answer.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div>
-    <p>Date of answer: {{ question.answerDate }} </p>
+    <p>Date of answer: {{ question.answerDate | date:'YYYY-MM-d HH:mm:ss' }} </p>
   </div>
   <div>
     <button (click)="onClearResult(question)">Clear result</button>
