update shared components

--- a/src/app/shared/components/card-question/card-question.component.html
+++ b/src/app/shared/components/card-question/card-question.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="box">
       <h4 class="box-title">Question create: </h4>
-      <p class="box-text">{{ question.createDate }}</p>
+      <p class="box-text">{{ question.createDate | date:'YYYY-MM-d HH:mm:ss' }}</p>
     </div>
   </div>
   <div class="btn-box">
