--- a/src/app/pages/list-of-questions/list-of-questions.component.scss
+++ b/src/app/pages/list-of-questions/list-of-questions.component.scss
@@ -7,11 +7,11 @@
 
   .box-list {
     display: flex;
-    align-items: center;
     justify-content: space-between;
 
     .box-list-block {
       width: 50%;
+      padding: 5px;
     }
   }
 }
